# de-mensura-hominis

./: .gitignore  LICENSE  Makefile  README.md  SETUP.md  _quarto.yml  index.html  index.qmd  pyproject.toml
chapters/motivation-and-goals/: index.html  index.qmd  requirements.txt
html/: index.html  robots.txt  search.json  sitemap.xml
html/chapters/motivation-and-goals/: index.html
html/site_libs/bootstrap/: bootstrap-dark-22351596708c7f12fd309b8f4870068b.min.css  bootstrap-e733a7843d9c82cfdc90a99ffef33e29.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-e5aae987490e29faa5918e5abf71ae14.css
